adicionei um paragrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos porro nemo temporibus odit harum eos voluptatem iusto officia quo modi necessitatibus omnis non, iure voluptates assumenda sapiente nostrum expedita unde?</p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde ipsum odio fuga est optio laudantium! Enim nam magnam, incidunt repudiandae placeat fugit, ex odio numquam facilis dolorem ipsum, quia quas.</p>
 </body>
 </html>
